force-app/main/default/objects/TravelDiaryEntry__c/TravelDiaryEntry__c.object-meta.xml
<CustomObject>
    <label>TravelDiaryEntry</label>
    <nameField>
        <label>TravelDiaryEntry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TravelDiaryEntrys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>