force-app/main/default/objects/TravelDiaryEntry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>The place coming</inlineHelpText>
    <label>District</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thiruvananthapuram</fullName>
                <default>true</default>
                <label>Thiruvananthapuram</label>
            </value>
            <value>
                <fullName>Kollam</fullName>
            </value>
            <value>
                <fullName>Alappuzha</fullName>
            </value>
            <value>
                <fullName>Pathanamthitta</fullName>
            </value>
            <value>
                <fullName>Kottayam</fullName>
            </value>
            <value>
                <fullName>Idukki</fullName>
            </value>
            <value>
                <fullName>Ernakulam</fullName>
            </value>
            <value>
                <fullName>Thrissur</fullName>
            </value>
            <value>
                <fullName>Palakkad</fullName>
            </value>
            <value>
                <fullName>Malappuram</fullName>
            </value>
            <value>
                <fullName>Kozhikode</fullName>
            </value>
            <value>
                <fullName>Wayanad</fullName>
            </value>
            <value>
                <fullName>Kannur</fullName>
            </value>
            <value>
                <fullName>Kasaragod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>