force-app/main/default/objects/TravelDiaryEntry__c/fields/Place_Visited__c.field-meta.xml
<CustomField>
    <fullName>Place_Visited__c</fullName>
    <label>Place Visited</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>