force-app/main/default/objects/TravelDiaryEntry__c/fields/Upload_Image__c.field-meta.xml
<CustomField>
    <fullName>Upload_Image__c</fullName>
    <inlineHelpText>upload 1 image of the place</inlineHelpText>
    <label>Upload Image</label>
    <type>Url</type>
</CustomField>